fixed hero images - z-index 7777

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,7 +34,7 @@ p {
   text-align: center;
 }
 
-button {
+.main-buttons {
   background-color: $brand-color; /* Yellow background */
   border: none; /* Remove the default border */
   color: $secondary-color; /* Maroon text */
@@ -51,7 +51,7 @@ button {
   width: 200px;
 }
 
-button:hover {
+.main-buttons:hover {
   box-shadow: 0 2px 0 0 $secondary-color; /* Slightly darker shadow on hover, reduced offset */
   transform: translateY(3px); /* Move the button downwards */
 }
@@ -63,18 +63,32 @@ button:hover {
   cursor: pointer;
   z-index: 9999;
   position: relative;
+  right: 20px;
+  padding: 0;
 }
 
 #main-nav {
   display: none;
 }
 
+#log-in-btn {
+  background-color: $tertiary-color;
+  border-radius: 25px;
+  border: 1px solid $secondary-color;
+  color: $secondary-color;
+  font-family: $secondary-font;
+  text-align: center;
+  cursor: pointer;
+  padding: 5px 10px;
+}
 .nav-item {
   border-left: solid;
   border-width: 1px;
   padding: 10px 20px;
   margin: 0;
 }
+
+
 
 @media (min-width: 900px) {
   .menu-icon {
@@ -94,9 +108,8 @@ button:hover {
   height: 100%;
   background-color: $bg-color;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
-  align-items: center;
   transition: left 0.3s ease-in-out;
   z-index: 9998;
 }
@@ -127,7 +140,7 @@ button:hover {
 .menu-list {
   display: flex;
   flex-direction: column;
-  align-items: space-between;
+  justify-content: space-between;
 }
 
 // General Header Styling
@@ -174,6 +187,8 @@ header {
   display: inline-block;
   border-left: solid;
   border-width: 1px;
+  padding-left: 5px;
+  width: 175px;
 }
 
 .search input[type="Search Recipes"] {
@@ -182,7 +197,11 @@ header {
   border-radius: 25px; /* Rounded border */
   border: 1px solid $secondary-color; /* Border color */
   width: 100%; /* Full width */
+  height: 25px;
   box-sizing: border-box; /* Include padding and border in the element's total width and height */
+  margin: 5px;
+  padding-left: 30px; /* Add padding to the left */
+  color: $secondary-color;
 }
 
 .search input[type="Search Recipes"]::placeholder {
@@ -201,8 +220,9 @@ header {
   width: 20px; /* Width of the search icon */
   height: 20px; /* Height of the search icon */
   background: url('/assets/search-icon.svg') no-repeat center center; /* Path to your search icon */
-  background-size: contain; /* Ensure the icon fits within the element */
+  background-size: 16px 16px; /* Set the size of the icon */
   filter: invert(11%) sepia(37%) saturate(5324%) hue-rotate(347deg) brightness(85%) contrast(103%); // Filter to match $secondary-color
+  margin: 0 10px;
 }
 
 
@@ -216,6 +236,8 @@ header {
   justify-content: center;
   margin: 0 auto;
   max-width: 950px;
+  position: relative;
+  z-index: 8888;
 }
 
 #hero-motto-text {
@@ -236,23 +258,26 @@ header {
   margin: 0 auto;
   min-width: 2500px;
   overflow-x: visible;
-  overflow-y: hidden;
+  overflow-y: visible;
 }
 .hero-container {
   display: flex;
   justify-content: center;
   margin-left: 250px;
   transform: translateY(-150px);
+  z-index: 7777;
+  position: relative;
 }
 
 .hero-image {
   width: 298px;
-  height: 360px;
+  height: 298px;
   background-size: center;
   background-position:center;
   border-radius: 30px;
   background-repeat: no-repeat;
   border: 1px solid $secondary-color;
+  object-fit: cover;
 }
 
 
